--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Roboto+Serif:opsz,wght@8..144,100;8..144,400;8..144,600&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>Best sneakers</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
